Fixes for images not showing up once deployed

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -75,7 +75,7 @@ footer {
 }
 
 .backgroundCircles {
-    background-image: url("../Images/background.jpg");
+    background-image: url("../Images/Background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 100%;
